--- a/.github/workflows/publish_website.yml
+++ b/.github/workflows/publish_website.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 10
-      - run: npm run build && ./publish-from-actions.sh
+      - run: npm ci && npm run build && ./publish-from-actions.sh
         env:
           GITHUB_PERSONAL_TOKEN: ${{secrets.GITHUB_PERSONAL_TOKEN}}
