--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "test": "npm run build && jest",
     "eject": "react-scripts eject",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "formatter": "prettier --check ./src/**/*.ts",
-    "formatter-write": "prettier --write ./src/**/*.ts"
+    "formatter": "prettier --check './src/**/*.ts'",
+    "formatter-write": "prettier --write './src/**/*.ts'"
   },
   "eslintConfig": {
     "extends": "react-app"
